--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <div class="base-body max-width"><section id="header" class="header max-body-width">
     <div class="header-wrap">
         <div class="header-left-side"><a class="home" href="/"><span class="site-name">Tom Stuff</span><span class="site-slogan"> - The pay's not great, but the work is hard</span></a></div>
-        <div class="header-right-side"></div>
+        <div class="header-right-side"><div class="nav-wrap"><div class="nav"><a class="site-tag" href="/tags/">Tags</a></div></div></div>
     </div>
 </section><div id="content" class="flex-body max-body-width"><ul class="note-list"><li><a class="note" href="/posts/kernel-self-protection/">
             <p class="note-title">Kernel Self Protection</p><p class="note-date">2017-06-04</p><p class="note-content">grsecrurity have stopped releasing their unstable kernel patches, leaving a bit of a void if you want to add those layers of protection to your kernel.
-<span>&mldr;</span></p></a><p class="note-labels"><a class="article-tag" href="/tags/nix/"><span class="hashtag">#</span>Nix</a></p></li><li><a class="note" href="/posts/order-your-coloured-horse-today/">
-            <p class="note-title">Future news: Order your coloured horse today</p><p class="note-date">2017-04-09</p><p class="note-content"><span>&mldr;</span></p></a><p class="note-labels"><a class="article-tag" href="/tags/futurenews/"><span class="hashtag">#</span>FutureNews</a></p></li><li><a class="note" href="/posts/nix-hackathon-march-2017/">
+<span>&mldr;</span></p></a><p class="note-labels"><a class="article-tag" href="/tags/nix/"><span class="hashtag">#</span>Nix</a></p></li><li><a class="note" href="/posts/nix-hackathon-march-2017/">
             <p class="note-title">Nix hackathon March 2017</p><p class="note-date">2017-03-17</p><p class="note-content">Earlier this month Smarkets was being awesome and hosted our 2nd Nix hackathon. We had a fantasic crowd of smart people, and the Smarkets office was downright amazing. We had standing desks with extra monitors. The coffee was so thick that it was still strong in homeopathic doses. We even had smarties on tap.
 <span>&mldr;</span></p></a><p class="note-labels"><a class="article-tag" href="/tags/nix/"><span class="hashtag">#</span>Nix</a></p></li><li><a class="note" href="/posts/systemd-dynamic-users/">
             <p class="note-title">systemd dynamic users</p><p class="note-date">2017-02-16</p><p class="note-content">systemd 232 introduced a really cool feature that allows running as a dynamically allocated user with DynamicUser=yes.
@@ -26,7 +25,9 @@
             <p class="note-title">Running your own OpenVPN</p><p class="note-date">2016-11-16</p><p class="note-content">I consider privacy as important but I am not a government-conspiracy nut. Even so, the passed Investigatory powers bill is extreme, and it should worry you. Political avenues have been exhausted. Legal challenges are unlikely to succeed unless lawyers can argue that the IPB is incompatible with fundamental human rights.
 The only option left is technology.
 First, some motivation by showing examples of what will be stored. Here is the government's clarification of Internet Connection Records.<span>&mldr;</span></p></a></li><li><a class="note" href="/posts/purescript-s-c-backend/">
-            <p class="note-title">Purescript's c++ backend</p><p class="note-date">2016-11-10</p></a><p class="note-labels"><a class="article-tag" href="/tags/purescript/"><span class="hashtag">#</span>Purescript</a></p></li></ul><div class="pagination">
+            <p class="note-title">Purescript's c++ backend</p><p class="note-date">2016-11-10</p></a><p class="note-labels"><a class="article-tag" href="/tags/purescript/"><span class="hashtag">#</span>Purescript</a></p></li><li><a class="note" href="/posts/ipython-shells-with-nix-updated/">
+            <p class="note-title">IPython shells with nix, updated</p><p class="note-date">2016-11-03</p><p class="note-content">I've written about IPython shells with Nix previously.
+<span>&mldr;</span></p></a><p class="note-labels"><a class="article-tag" href="/tags/nix/"><span class="hashtag">#</span>Nix</a><a class="article-tag" href="/tags/python/"><span class="hashtag">#</span>Python</a></p></li></ul><div class="pagination">
     <ul><li><a class="active" href="/">1</a></li><li><a class="" href="/page/2/">2</a></li><li><a class="" href="/page/3/">3</a></li></ul>
 </div></div><section id="footer" class="footer max-body-width"><p>Tom Stuff</p>
 <p><span>Powered by </span><a href="https://gohugo.io">Hugo</a><span> and the </span><a href="https://themes.gohugo.io/hugo-notepadium/">Notepadium</a></p></section></div>
