--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <div class="header-right-side"><div class="nav-wrap"><div class="nav"><a class="site-tag" href="/tags/">Tags</a></div></div></div>
     </div>
 </section><div id="content" class="flex-body max-body-width"><ul class="note-list"><li><a class="note" href="/posts/postgraphile-replace-type/">
-            <p class="note-title">Replacing types in Postgraphile</p><p class="note-date">2020-01-05</p><p class="note-content">Postgraphile comes with many useful defaults out of the box, but occassionally it's useful to replace the default types.
+            <p class="note-title">Replacing types in Postgraphile</p><p class="note-date">2020-01-05</p><p class="note-content">Postgraphile comes with many good defaults out of the box, but occassionally it's necessary to replace a default type.
 <span>&mldr;</span></p></a></li><li><a class="note" href="/posts/kernel-self-protection/">
             <p class="note-title">Kernel Self Protection</p><p class="note-date">2017-06-04</p><p class="note-content">grsecrurity have stopped releasing their unstable kernel patches, leaving a bit of a void if you want to add those layers of protection to your kernel.
 <span>&mldr;</span></p></a><p class="note-labels"><a class="article-tag" href="/tags/nix/"><span class="hashtag">#</span>Nix</a></p></li><li><a class="note" href="/posts/nix-hackathon-march-2017/">
